AI-JADEDEVS4/src/objects/DupeBlocker_Scenarios__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_to_Account__c</fullName>
        <description>Lead to Account</description>
        <label>Lead to Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_to_Contact__c</fullName>
        <label>Lead to Contact</label>
        <type>TextArea</type>
    </fields>
    <label>DupeBlocker Scenarios</label>
</CustomObject>